<resources>
    <string name="app_name">Online Neighborhood</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string-array name="preferences">
        <item>Sports</item>
        <item>Gigs</item>
        <item>Dating</item>
        <item>Misc.</item>
    </string-array>

    <string-array name="suburbs">
        <item>Brunswick</item>
        <item>Kew</item>
        <item>Footscray</item>
        <item>Altona</item>
        <item>Collingwood</item>
    </string-array>

    <string-array name="eventTypes">
        <item>Drinks</item>
        <item>Birthday</item>
        <item>Active</item>
        <item>Gig</item>
        <item>Date</item>
        <item>Specifically Beers</item>
        <item>Misc.</item>
    </string-array>


    <string-array name="dates">
        <item>Just Today</item>
        <item>Next 2 days</item>
        <item>This Weekend</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>All Time</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_event">Create an Event!</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="time">Set Time</string>
    <string name="date">Set Date</string>
    <string name="address">Address</string>
    <string name="or">OR</string>
    <string name="get_location">get Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_time">Start Time?</string>
    <string name="end_time">End Time?</string>
    <string name="picture_here">PICTURE HERE</string>
    <string name="pick_image_intent_text">Select Image</string>

    <string name="my_events_hosting">Hosting</string>
    <string name="my_events_attending">Attending</string>

</resources>
